style: adding a logo for the extension

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,23 @@
 {
   "short_name": "25+5 clock",
   "name": "25+5 clock - POMODORO",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "favicon-16x16.png",
+      "type": "image/png",
+      "sizes": "16x16"
+    },
+    {
+      "src": "favicon-32x32.png",
+      "type": "image/png",
+      "sizes": "32x32"
+    }
+  ],
   "manifest_version": 2,
   "browser_action": {
     "default_popup": "index.html",
