--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,28 +1,18 @@
 {
   "short_name": "25+5 clock",
   "name": "25+5 clock - POMODORO",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "favicon-16x16.png",
-      "type": "image/png",
-      "sizes": "16x16"
-    },
-    {
-      "src": "favicon-32x32.png",
-      "type": "image/png",
-      "sizes": "32x32"
-    }
-  ],
+
+  "icons": {
+    "16": "favicon-16x16.png",
+    "32": "favicon-32x32.png",
+    "48": "favicon.ico",
+    "128": "favicon.ico"
+  },
   "manifest_version": 2,
   "browser_action": {
     "default_popup": "index.html",
     "default_title": "25+5 clock"
   },
   "version": "1.0",
-  "content_security_policy": "script-src 'self' 'sha256-QUIMvM2f9nMBim9SwqHupYEHvrIBf0fUBWer/0dIUdU='; object-src 'self'"
+  "content_security_policy": "script-src 'self' 'sha256-03PEOLvzgcFKf6SBFrgtQBLzkBXUrjYG8eJuOfkHkeo='; object-src 'self'"
 }
